<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".CallPhone">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity= "center"
        android:background="#7adfb8" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/app_name010"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/ttt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="0000"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/app_name01"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/number"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_name02"
                android:inputType="number"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity= "center"
            android:background="@android:color/black"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:text="@string/app_name04"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:text="@string/app_name05"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/query"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@drawable/text_bg"
                android:text="@string/app_name06"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>